chore: update .DS_Store file

--- a/Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座/antigravity-basics-site/index.html
+++ b/Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座/antigravity-basics-site/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>バイブコーディング基礎講座 | Google Antigravity</title>
     <meta name="description" content="Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座">
     <link rel="preconnect" href="https://fonts.googleapis.com">
