--- a/Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座/antigravity-basics-site/lesson2.html
+++ b/Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座/antigravity-basics-site/lesson2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第2回：5分で完了！Antigravityインストールから日本語化まで | バイブコーディング基礎講座</title>
     <meta name="description" content="Antigravityのセットアップと基本画面の理解">
     <link rel="preconnect" href="https://fonts.googleapis.com">
