--- a/Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座/antigravity-basics-site/lesson3.html
+++ b/Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座/antigravity-basics-site/lesson3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第3回：「こんなの作って」で本当にできる！初めてのバイブコーディング体験 | バイブコーディング基礎講座</title>
     <meta name="description" content="チャットで指示するだけでコードが生成される体験">
     <link rel="preconnect" href="https://fonts.googleapis.com">
