--- a/Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座/antigravity-basics-site/lesson4.html
+++ b/Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座/antigravity-basics-site/lesson4.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第4回：AIエージェントを使いこなせ！思い通りの結果を引き出す指示の出し方 | バイブコーディング基礎講座</title>
     <meta name="description" content="プロンプトエンジニアリングの基礎">
     <link rel="preconnect" href="https://fonts.googleapis.com">
