--- a/Google Antigravity実践活用術！Nano Banana×ブラウザエージェントで業務を革命するバイブコーディング応用講座/antigravity-advanced-site/index.html
+++ b/Google Antigravity実践活用術！Nano Banana×ブラウザエージェントで業務を革命するバイブコーディング応用講座/antigravity-advanced-site/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>バイブコーディング応用講座 | Google Antigravity</title>
     <meta name="description" content="Google Antigravity実践活用術！Nano Banana×ブラウザエージェントで業務を革命するバイブコーディング応用講座">
     <link rel="preconnect" href="https://fonts.googleapis.com">
