--- a/Google Antigravity実践活用術！Nano Banana×ブラウザエージェントで業務を革命するバイブコーディング応用講座/antigravity-advanced-site/lesson2.html
+++ b/Google Antigravity実践活用術！Nano Banana×ブラウザエージェントで業務を革命するバイブコーディング応用講座/antigravity-advanced-site/lesson2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第2回：AIがブラウザを勝手に動かす！ | バイブコーディング応用講座</title>
     <meta name="description" content="ブラウザエージェントで動作確認を完全自動化する方法を学ぶ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
