--- a/Google Antigravity実践活用術！Nano Banana×ブラウザエージェントで業務を革命するバイブコーディング応用講座/antigravity-advanced-site/lesson5.html
+++ b/Google Antigravity実践活用術！Nano Banana×ブラウザエージェントで業務を革命するバイブコーディング応用講座/antigravity-advanced-site/lesson5.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第5回：総合実践！日本語だけで作る本格Webアプリ開発 | バイブコーディング応用講座</title>
     <meta name="description" content="全ての技術を組み合わせた本格Webアプリ開発">
     <link rel="preconnect" href="https://fonts.googleapis.com">
