--- a/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/lesson1.html
+++ b/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/lesson1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第1回：採用業務の手作業が消えない理由を見抜く！候補者連絡フローの全体像を理解する | "CX向上型" 採用オペレーションフロー</title>
     <meta name="description" content="Google Workspace Studio × Geminiで候補者連絡を自動化する">
     <link rel="preconnect" href="https://fonts.googleapis.com">
