--- a/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/lesson5.html
+++ b/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/lesson5.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第5回：採用オペレーションを完全自動化！選考フロー全体をStudioで一本化する方法 | "CX向上型" 採用オペレーションフロー</title>
     <meta name="description" content="Google Workspace Studio × Geminiで選考フロー全体を一本化する方法">
     <link rel="preconnect" href="https://fonts.googleapis.com">
