--- a/Google Workspace Studio×Gmail×Geminiで人事・採用オペレーションを整流化する採用パイプライン自動化フロー/recruitment-pipeline-automation-site/index.html
+++ b/Google Workspace Studio×Gmail×Geminiで人事・採用オペレーションを整流化する採用パイプライン自動化フロー/recruitment-pipeline-automation-site/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>採用パイプライン自動化フロー | Google Workspace Studio</title>
     <meta name="description" content="Google Workspace Studio × Gmail × Geminiで人事・採用オペレーションを整流化する採用パイプライン自動化フロー">
     <link rel="preconnect" href="https://fonts.googleapis.com">
