--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson3.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第3回：追客漏れゼロの受信トレイ！ | 営業パイプライン自動化フロー</title>
     <meta name="description" content="要対応案件メールの自動ラベル化＆次アクション設計">
     <link rel="preconnect" href="https://fonts.googleapis.com">
