--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson5.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson5.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第5回：キーワード監視で確度高い案件を逃さない | 営業パイプライン自動化フロー</title>
     <meta name="description" content="営業キーワードを自動監視して高確度案件を即座に検知し、4つのエージェントを統合して運用可能な営業フローを完成させます">
     <link rel="preconnect" href="https://fonts.googleapis.com">
