--- a/Google Workspace Studioで商談・見積・フォローを自動化する！セールスオペレーション効率化講座/sales-automation-site/lesson2.html
+++ b/Google Workspace Studioで商談・見積・フォローを自動化する！セールスオペレーション効率化講座/sales-automation-site/lesson2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第2回：商談を取りこぼさない！ステージ別に自動フォローが飛ぶ進捗管理システム | セールスオペレーション効率化講座</title>
     <meta name="description" content="Google Workspace Studioで商談・見積・フォローを自動化する">
     <link rel="preconnect" href="https://fonts.googleapis.com">
