--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson2.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/lesson2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第2回：重要ポイントだけを抽出して確認時間を1/5にする！日報と週報を自動要約する確認時短フロー | ゼロタッチマネジメント</title>
     <meta name="description" content="Google Workspace Studioで報告・承認・進捗管理を自動化する">
     <link rel="preconnect" href="https://fonts.googleapis.com">
