--- a/Google Workspace Studioで経費・勤怠・タスクを完全自動化する！バックオフィス業務ゼロ化講座/backoffice-automation-site/lesson3.html
+++ b/Google Workspace Studioで経費・勤怠・タスクを完全自動化する！バックオフィス業務ゼロ化講座/backoffice-automation-site/lesson3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第3回：36協定違反を未然に防ぐ！残業時間をリアルタイム監視するアラートシステム | バックオフィス業務ゼロ化講座</title>
     <meta name="description" content="Google Workspace Studioで経費・勤怠・タスクを完全自動化する">
     <link rel="preconnect" href="https://fonts.googleapis.com">
