--- a/Google Workspace Studioで経費・勤怠・タスクを完全自動化する！バックオフィス業務ゼロ化講座/backoffice-automation-site/lesson4.html
+++ b/Google Workspace Studioで経費・勤怠・タスクを完全自動化する！バックオフィス業務ゼロ化講座/backoffice-automation-site/lesson4.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第4回：期限切れゼロを実現！3日前・前日・当日の段階リマインド自動化 | バックオフィス業務ゼロ化講座</title>
     <meta name="description" content="Google Workspace Studioで経費・勤怠・タスクを完全自動化する">
     <link rel="preconnect" href="https://fonts.googleapis.com">
