--- a/Google Workspace Studioで経費・勤怠・タスクを完全自動化する！バックオフィス業務ゼロ化講座/backoffice-automation-site/lesson5.html
+++ b/Google Workspace Studioで経費・勤怠・タスクを完全自動化する！バックオフィス業務ゼロ化講座/backoffice-automation-site/lesson5.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第5回：経営層への報告を完全自動化！AIが作る月次インサイトレポート | バックオフィス業務ゼロ化講座</title>
     <meta name="description" content="Google Workspace Studioで経費・勤怠・タスクを完全自動化する">
     <link rel="preconnect" href="https://fonts.googleapis.com">
