--- a/Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座/customer-success-automation-site/index.html
+++ b/Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座/customer-success-automation-site/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>カスタマーサクセス完全自動化講座 | Google Workspace Studio</title>
     <meta name="description" content="Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座">
     <link rel="preconnect" href="https://fonts.googleapis.com">
