--- a/Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座/customer-success-automation-site/lesson1.html
+++ b/Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座/customer-success-automation-site/lesson1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第1回：一次対応を90%削減！AIが即座に回答ドラフトを生成する問い合わせ自動処理フロー | カスタマーサクセス完全自動化講座</title>
     <meta name="description" content="メール受信→内容分析→自動回答ドラフト作成。Geminiで問い合わせを自動分類し、回答を自動生成。">
     <link rel="preconnect" href="https://fonts.googleapis.com">
