--- a/Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座/customer-success-automation-site/lesson2.html
+++ b/Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座/customer-success-automation-site/lesson2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第2回：更新漏れゼロを実現！30日前から始める段階的リマインドシステム | カスタマーサクセス完全自動化講座</title>
     <meta name="description" content="更新日監視→リマインド送信→担当者アサイン。30日前から段階的な自動フォローを実装。">
     <link rel="preconnect" href="https://fonts.googleapis.com">
