--- a/Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座/customer-success-automation-site/lesson3.html
+++ b/Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座/customer-success-automation-site/lesson3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第3回：低評価は即フォロー！取引完了時に自動送信するNPS調査システム | カスタマーサクセス完全自動化講座</title>
     <meta name="description" content="対象抽出→調査送信→回答集計→アラート発報。取引完了後に自動調査、低評価は即時フォロー。">
     <link rel="preconnect" href="https://fonts.googleapis.com">
