--- a/Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座/customer-success-automation-site/lesson4.html
+++ b/Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座/customer-success-automation-site/lesson4.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第4回：チャーンを30日前に予測！AIが見つけ出す解約リスク早期検知システム | カスタマーサクセス完全自動化講座</title>
     <meta name="description" content="行動分析→リスクスコア計算→アラート→対策提案。チャーンの兆候を30日前に検知してアラート。">
     <link rel="preconnect" href="https://fonts.googleapis.com">
