--- a/Google Workspace Studio拡張開発-カスタムステップ作成講座/custom-step-development-site/lesson1.html
+++ b/Google Workspace Studio拡張開発-カスタムステップ作成講座/custom-step-development-site/lesson1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Lesson 1: カスタムステップ入門 | Google Workspace Studio 拡張開発講座</title>
     <meta name="description" content="カスタムステップの仕組みを理解し、最初のステップを作成・テストする">
     <link rel="preconnect" href="https://fonts.googleapis.com">
