--- a/Google Workspace Studio拡張開発-カスタムステップ作成講座/custom-step-development-site/lesson2.html
+++ b/Google Workspace Studio拡張開発-カスタムステップ作成講座/custom-step-development-site/lesson2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Lesson 2: 入出力変数を極める | Google Workspace Studio 拡張開発講座</title>
     <meta name="description" content="入力変数で柔軟にデータを収集し、出力変数で後続ステップにデータを渡す">
     <link rel="preconnect" href="https://fonts.googleapis.com">
