--- a/Google Workspace Studio拡張開発-カスタムステップ作成講座/custom-step-development-site/lesson3.html
+++ b/Google Workspace Studio拡張開発-カスタムステップ作成講座/custom-step-development-site/lesson3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Lesson 3: 入力検証でエラーを防ぐ | Google Workspace Studio 拡張開発講座</title>
     <meta name="description" content="ユーザー入力を検証し、エラーを未然に防ぐバリデーションの実装">
     <link rel="preconnect" href="https://fonts.googleapis.com">
