--- a/Google Workspace Studio拡張開発-カスタムステップ作成講座/custom-step-development-site/lesson4.html
+++ b/Google Workspace Studio拡張開発-カスタムステップ作成講座/custom-step-development-site/lesson4.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Lesson 4: CRM連携カスタムステップを作る | Google Workspace Studio 拡張開発講座</title>
     <meta name="description" content="カスタムリソース、外部API連携、認証情報の安全な管理を学ぶ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
