--- a/Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座/antigravity-basics-site/lesson1.html
+++ b/Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座/antigravity-basics-site/lesson1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第1回：AIが勝手にコードを書く時代到来！ | バイブコーディング基礎講座</title>
     <meta name="description" content="Google Antigravityとバイブコーディングの衝撃を理解する">
     <link rel="preconnect" href="https://fonts.googleapis.com">
