--- a/Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座/antigravity-basics-site/lesson5.html
+++ b/Google Antigravityで始めるAI開発入門！コード知識ゼロでもできるバイブコーディング基礎講座/antigravity-basics-site/lesson5.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第5回：実践！日本語だけで作る「自分専用Webツール」 | バイブコーディング基礎講座</title>
     <meta name="description" content="完成度の高いツールを一人で作り上げる">
     <link rel="preconnect" href="https://fonts.googleapis.com">
