--- a/Google Antigravity実践活用術！Nano Banana×ブラウザエージェントで業務を革命するバイブコーディング応用講座/antigravity-advanced-site/lesson4.html
+++ b/Google Antigravity実践活用術！Nano Banana×ブラウザエージェントで業務を革命するバイブコーディング応用講座/antigravity-advanced-site/lesson4.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第4回：GitHubもNotionも思いのまま！ | バイブコーディング応用講座</title>
     <meta name="description" content="MCP連携で開発ワークフローを革命する方法を学ぶ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
