--- a/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/lesson2.html
+++ b/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/lesson2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第2回：面接前準備を自動化！カレンダー × Gemini × Chatで候補者へ必要情報を自動送信する | "CX向上型" 採用オペレーションフロー</title>
     <meta name="description" content="Google Workspace Studio × Geminiで面接前準備を自動化する">
     <link rel="preconnect" href="https://fonts.googleapis.com">
