--- a/Google Workspace Studio×Gmail×Geminiで人事・採用オペレーションを整流化する採用パイプライン自動化フロー/recruitment-pipeline-automation-site/lesson4.html
+++ b/Google Workspace Studio×Gmail×Geminiで人事・採用オペレーションを整流化する採用パイプライン自動化フロー/recruitment-pipeline-automation-site/lesson4.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第4回：毎朝の採用ブリーフィング自動配信 | 採用パイプライン自動化フロー</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
