--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson1.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第1回：案件メール地獄から脱出する | 営業パイプライン自動化フロー</title>
     <meta name="description" content="Google Workspace Studioで営業メール仕事を分解する">
     <link rel="preconnect" href="https://fonts.googleapis.com">
