--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson4.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson4.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第4回：提案資料と見積書を完全自動整理！ | 営業パイプライン自動化フロー</title>
     <meta name="description" content="Drive保存 × 定期送信フローで営業資料を整流化">
     <link rel="preconnect" href="https://fonts.googleapis.com">
