--- a/Google Workspace Studioで商談・見積・フォローを自動化する！セールスオペレーション効率化講座/sales-automation-site/index.html
+++ b/Google Workspace Studioで商談・見積・フォローを自動化する！セールスオペレーション効率化講座/sales-automation-site/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>セールスオペレーション効率化講座 | Google Workspace Studio</title>
     <meta name="description" content="Google Workspace Studioで商談・見積・フォローを自動化する！セールスオペレーション効率化講座">
     <link rel="preconnect" href="https://fonts.googleapis.com">
