--- a/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/index.html
+++ b/Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント/zero-touch-management-site/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>ゼロタッチマネジメント | Google Workspace Studio</title>
     <meta name="description" content="Google Workspace Studioで報告・承認・進捗管理を自動化する！管理職のためのゼロタッチマネジメント">
     <link rel="preconnect" href="https://fonts.googleapis.com">
