--- a/Google Workspace Studioで経費・勤怠・タスクを完全自動化する！バックオフィス業務ゼロ化講座/backoffice-automation-site/index.html
+++ b/Google Workspace Studioで経費・勤怠・タスクを完全自動化する！バックオフィス業務ゼロ化講座/backoffice-automation-site/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>バックオフィス業務ゼロ化講座 | Google Workspace Studio</title>
     <meta name="description" content="Google Workspace Studioで経費・勤怠・タスクを完全自動化する！バックオフィス業務ゼロ化講座">
     <link rel="preconnect" href="https://fonts.googleapis.com">
