--- a/Google Workspace Studioで経費・勤怠・タスクを完全自動化する！バックオフィス業務ゼロ化講座/backoffice-automation-site/lesson2.html
+++ b/Google Workspace Studioで経費・勤怠・タスクを完全自動化する！バックオフィス業務ゼロ化講座/backoffice-automation-site/lesson2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第2回：5,000円未満は即承認！金額で振り分けるスマート承認フロー | バックオフィス業務ゼロ化講座</title>
     <meta name="description" content="Google Workspace Studioで経費・勤怠・タスクを完全自動化する">
     <link rel="preconnect" href="https://fonts.googleapis.com">
