--- a/Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座/customer-success-automation-site/lesson5.html
+++ b/Google Workspace Studioで顧客対応・問い合わせ・フォローアップを自動化する！カスタマーサクセス完全自動化講座/customer-success-automation-site/lesson5.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第5回：経営判断を加速する！全KPIをリアルタイム可視化するCSダッシュボード | カスタマーサクセス完全自動化講座</title>
     <meta name="description" content="データ集約→KPI計算→ダッシュボード更新→週次レポート配信。CSの全体状況を可視化。">
     <link rel="preconnect" href="https://fonts.googleapis.com">
