--- a/Google Workspace Studioの活用/workspace-studio-basics-site/lesson2.html
+++ b/Google Workspace Studioの活用/workspace-studio-basics-site/lesson2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>第2回：Google Workspace Studioの登録と基本操作 | Google Workspace Studioの活用</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
